# django-app

./: .gitignore
mysite/: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  settings.py
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: forms.py
