[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "Django project"
authors = ["user313 <mbj2023@yandex.ru>"]
readme = "README.md"
packages = [{include = "mysite"}]

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=6.0.2,<7.0.0"
gunicorn = ">=25.0.3"
python-decouple = ">=3.8"
pillow = "^11.0"
djangorestframework = "^3.15"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "*"
djangorestframework = "*"
django-filter = "*"
